# rprobe

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  OPTIMIZATION_QUICK_START.md  PROJECT_STATUS.md  README.md  analyze_test_duration.py  main.py  optimize_tests.py  paramiko_methods_analysis.md  pyproject.toml  run_integration_tests.sh  run_tests_sequential.py  test_parallel_close_perf.py  test_streaming_performance.py  venv.bat  venv.sh
.github/workflows/: ci.yml  release.yml
config/: config.yaml  config.yaml.example
docs/: ASYNC_EXECUTOR_GUIDE.md  CODE_REVIEW_CHECKLIST.md  CONNECTION_FACTORY_IMPLEMENTATION.md  FINAL_IMPLEMENTATION_SUMMARY.md  FIX_COMPLETE.md  IMPLEMENTATION_COMPLETION_REPORT.md  MAIN_PY_TESTING_REPORT.md  MAIN_PY_TEST_REPORT.md  MIGRATION_100_PERCENT.md  MIGRATION_COMPLETE.md  MIGRATION_SUMMARY.md  NEW_TESTS_REPORT.md  PROJECT_COMPLETION_REPORT.md  RELEASE_CHECKLIST.md  SHORT_TERM_OPTIMIZATION_COMPLETE_REPORT.md  STREAM_EXECUTOR_IMPLEMENTATION_REPORT.md  TEST_ANALYSIS_AND_IMPROVEMENT_PLAN.md  blackbox_coverage_report.md  connection_architecture_comparison.md  integration_test_analysis.md  optimization_implementation_report.md  performance_optimization.md  streaming_optimization_report.md  test_adaptation_report.md  test_analysis_report.md  test_optimization_proposal.md  test_summary_report.md  whitebox_coverage_report.md
docs/git-workflow/: README.md  branch-protection.md  guide.md
examples/: README.md  advanced_patterns.py  architecture_comparison_demo.py  async_executor_example.py  basic_usage.py  batch_operations.py  combined_architecture_example.py  config_examples.py  connection_factory_example.py  monitoring.py  multi_session_demo.py  multi_shell_session_demo.py  optimized_close_demo.py  parallel_close_demo.py  pool_connection_management_demo.py  pool_reuse_demo.py  pool_single_shell_example.py  pool_stats_demo.py  single_conn_multi_shell_example.py  streaming_api_example.py
scripts/: check_quality.sh
src/: __init__.py  async_executor.py
src/backends/: base.py  factory.py  paramiko_backend.py
src/config/: __init__.py  manager.py  models.py
src/core/: __init__.py  client.py  connection.py  connection_factory.py  models.py  stream_executor.py
src/exceptions/: __init__.py
src/logging_config/: __init__.py
src/patterns/: __init__.py  prompt_detector.py  prompt_patterns.py
src/pooling/: __init__.py  stats_collector.py
src/receivers/: __init__.py  channel_receiver.py  channel_receiver_optimized.py  smart_receiver.py
src/rprobe/: __init__.py
src/session/: __init__.py  shell_session.py
src/utils/: ansi_cleaner.py  helpers.py  performance_monitor.py  wait_strategies.py
tests/: README.md  __init__.py  conftest.py
tests/contracts/: test_backend_contract.py
tests/integration/: __init__.py  test_async_executor_batch.py  test_backend_integration.py  test_blackbox_coverage.py  test_config.py  test_error_recovery.py  test_interactive.py  test_multi_session.py  test_pool_features.py  test_ssh_advanced.py  test_ssh_integration.py  test_stress.py  test_supplemental.py  test_whitebox_coverage.py
tests/unit/: __init__.py  test_ansi_cleaner.py  test_async_executor.py  test_async_executor_batch.py  test_async_executor_new.py  test_backends.py  test_backends_blackbox.py  test_backends_whitebox.py  test_channel_receiver.py  test_channel_receiver_coverage.py  test_channel_receiver_extended.py  test_client.py  test_config.py  test_config_parametrized.py  test_connection_factory.py  test_edge_cases_advanced.py  test_edge_cases_main.py  test_exceptions.py  test_exec_command.py  test_helpers.py  test_main_py_simulation.py  test_result.py  (+24 more)
(+34 files in other folders)
